--- a/Anasayfa.html
+++ b/Anasayfa.html
@@ -32,7 +32,7 @@
     </ol>
     <br>
     <form action="" method="post">
-    <!-- evet 5. ya da 6. commit zamanında çok bişi yapmadım sadece boş gözükmesin diye rastgele bişiler ekledim aynı ilk commitim gibi -->    
+    <!-- evet 5. ve 6. commit zamanında çok bişi yapmadım sadece boş gözükmesin diye rastgele bişiler ekledim aynı ilk commitim gibi -->    
     <a href="https://www.youtube.com/watch?v=it1rTvBcfRg&list=PLP9IO4UYNF0VdAajP_5pYG-jG2JRrG72s&ab_channel=w3schools.com">Buradan html öðrenebilirsiniz</a>
     <br>
 </body>
